--- a/test2.html
+++ b/test2.html
@@ -24,87 +24,95 @@
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td>Item Code </td>
-                <td>:<input type="text" placeholder="Enter Item Code"></td>
-            </tr>
-            <tr>
-                <td>Brand </td>
-                <td>
-                    :<select name="" id="">
-                        <option value="" selected disabled >Select Brand</option>
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                    </select>
-                </td>
-            </tr>
-            <tr>
-                <td>Category </td>
-                <td>
-                    :<select name="" id="">
-                        <option value="" selected disabled >Select Category</option>
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                    </select>
-                </td>
-            </tr>
-            <tr>
-                <td>Sub Category </td>
-                <td>
-                    :<select name="" id="">
-                        <option value="" selected disabled >Select Sub Category</option>
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                    </select>
-                </td>
-            </tr>
-            <tr>
-                <td>Item Name </td>
-                <td>:<input type="text" placeholder="Enter Item Name"></td>
-            </tr>
-            <tr>
-                <td>Purchace Price </td>
-                <td>:<input type="number" placeholder="Enter Purchace Price"></td>
-            </tr>
-            <tr>
-                <td>Sales Price </td>
-                <td>:<input type="number" placeholder="Enter Sales Price"></td>
-            </tr>
-            <tr>
-                <td>Discounted Ratio</td>
-                <td>:
-                    <input type="radio" name="" id=""><label for="">0</label>
-                    <input type="radio" name="" id=""><label for="">5</label>
-                    <input type="radio" name="" id=""><label for="">10</label>
-                </td>
-            </tr>
-            <tr>
-                <td>Note</td>
-                <td>:<textarea name="" id="" cols="20" rows="2"></textarea></td>
-            </tr>
-            <tr>
-                <td>Added date</td>
-                <td>:<input type="date" name="" id=""></td>
-            </tr>
-            <tr>
-                <td>
-
-                    <button>Clear</button>
-                    <button>Update</button>
-                    <button>Add</button>
-                </td>
-            </tr>
-            <tr>
-                <td>
-
-                    <button>Clear</button>
-                    <button>Update</button>
-                    <button>Add</button>
-                </td>
-            </tr>
+            <form action="">
+                <!-- item code start -->
+                <tr>
+                    <td>Item Code </td>
+                    <td>:<input type="text" id="inputItemCode" placeholder="Enter Item Code"></td>
+                </tr>
+                    <!-- item code end -->
+                    <!-- item brand start -->
+                <tr>
+                    <td>Brand </td>
+                    <td>
+                        :<select name="" id="selectBrand">
+                            <option value="" selected disabled >Select Brand</option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                        </select>
+                    </td>
+                </tr>
+                <!-- item brand end -->
+                <!-- item category start -->
+                <tr>
+                    <td>Category </td>
+                    <td>
+                        :<select name="" id="selectCategory">
+                            <option value="" selected disabled >Select Category</option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                        </select>
+                    </td>
+                </tr>
+                <!-- item category end -->
+                <tr>
+                    <td>Sub Category </td>
+                    <td>
+                        :<select name="" id="selectSubCategory">
+                            <option value="" selected disabled >Select Sub Category</option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                        </select>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Item Name </td>
+                    <td>:<input type="text" id="inputItemName" placeholder="Enter Item Name"></td>
+                </tr>
+                <tr>
+                    <td>Purchace Price </td>
+                    <td>:<input type="number" id="inputPurchaceName" placeholder="Enter Purchace Price"></td>
+                </tr>
+                <tr>
+                    <td>Sales Price </td>
+                    <td>:<input type="number" id="inputSalesPrice" placeholder="Enter Sales Price"></td>
+                </tr>
+                <tr>
+                    <td>Discounted Ratio</td>
+                    <td>:
+                        <input type="radio" name="discount" id="inputDis"><label for="">0</label>
+                        <input type="radio" name="discount" id="inputDis"><label for="">5</label>
+                        <input type="radio" name="discount" id="inputDis"><label for="">10</label>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Note</td>
+                    <td>:<textarea name="" id="inputNote" cols="20" rows="2"></textarea></td>
+                </tr>
+                <tr>
+                    <td>Added date</td>
+                    <td>:<input type="date" name="" id="inputDate"></td>
+                </tr>
+                <tr>
+                    <td>
+    
+                        <button>Clear</button>
+                        <button>Update</button>
+                        <button>Add</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+    
+                        <button>Clear</button>
+                        <button>Update</button>
+                        <button>Add</button>
+                    </td>
+                </tr>
+            </form>
 
         </tbody>
     </table>
